CHANGE_LOG

For the Github commit log see here: github.com/jks-prv/Beagle_SDR_GPS/commits/master

v1.800  November ?, 2024
    Rebase Kiwi Github repository. Moved from "Beagle_SDR_GPS" to "KiwiSDR". This was necessary
    to reduce the accumulated size of the repo including unwanted retention of the recent
    binary release files. Large static files are now stored and fetched from distro.kiwisdr.com
    during the software update process.
    
    Fix for SWBC database lookup (www.short-wave.info) when using Firefox. (thanks VK4018SWL)
    Fix for FT8 PSKReporter fragmentation that can cause upload data loss. (thanks dchristle)
    EiBi database: update from A24 to B24.

v1.703,704,705,706,707  November 2, 2024
    The binary install mechanism now covers a greater range of Debian minor releases numbers.
        On on BBG/BBB Debian 8.5 - 8.11 and 11.9 - 11.11 are covered by this release.
    
    Iframe now allows a virtual alias name to be added to the extension menu.  (thanks DF6DBF)
    ALE scanning no longer continuously resets the connection inactivity timer. (thanks HB9TMC)
    Fixed installation of /bin/nc (netcat) used by KMtronic-UDP antenna switch. (thanks F5LFE)
    Update to satellite table to reflect recent Galileo changes. (thanks F4FPR)

v1.702  October 23, 2024
    Binary updates:
        After this release is installed Kiwis become eligible to receive binary updates.
        That is, a full recompile from source code will not be required each time an update occurs.
        So an update should take a few minutes instead of 20-30.
    
        This will only occur if a binary file in the bin/ directory exists with the correct
        Debian version number (e.g. 8.5, 11.9) and platform name (e.g. BBG_BBB, BBAI, BBAI_64).
        For example, bin/kiwid_v1.702_D11.9_BBG_BBB.bin will be copied to /usr/local/bin/kiwid
        if validated. Otherwise recompilation from source will occur as a fallback.
        