@@ -24,7 +24,8 @@ An add-on board ("cape") that turns your BeagleBone into a web-accessible shortw
 * [Project webpage](http://www.kiwisdr.com)
 * [Operating information: installation, operation, FAQ](http://www.kiwisdr.com/info)
 * [User Forum](http://forum.kiwisdr.com)
-* Latest [source code commits](https://github.com/jks-prv/Beagle_SDR_GPS/commits/master)
+* Latest [source code commits](https://github.com/jks-prv/KiwiSDR/commits/master)
+* Previous [source code commits](https://github.com/jks-prv/Beagle_SDR_GPS/commits/master)
 * [Design review document](http://kiwisdr.com/docs/KiwiSDR/KiwiSDR.design.review.pdf)
 * [KiwiSDR 1 Schematic](http://www.kiwisdr.com/docs/KiwiSDR/kiwi.schematic.pdf)
 * [KiwiSDR 2 Schematic](http://www.kiwisdr.com/docs/KiwiSDR/kiwi-2.schematic.pdf)
